--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(./vendor/normalize.css);
+
+@import url(./vendor/InterWeb/fonts.css);
+
+.App {
+  font-family: 'Inter', 'Arial', sans-serif;
+}
+.authentication {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.authentication__header {
+  font-weight: 400;
+  line-height: 1.15;
+  font-size: 30px;
+}
+.authentication__form {
+  width: 430px;
+  height: 430px;
+  border-radius: 15px;
+  border: 2px solid#2f80ed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.authentication__input{
+  margin: 50px 0 0 0;
+  width: 300px;
+  border: none;
+  border-bottom: 2px solid #c1c1c1;
+}
+.authentication__input:focus{
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  outline: none;
+  border-bottom: 2px solid #2f80ed;
+}
+.authentication__button {
+  margin: 100px 0 0 0;
+  width: 300px;
+  height: 50px;
+  font-size: 15px;
+  border: none;
+  background-color: #2f80ed;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.link__edit-button {
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  background-color: #0000;
+  height: 10px;
+  cursor: pointer;
+  background-image: url('../../../images/EditButton.svg');
+  width: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-self: center;
 }
